antros uzduoties kelimas

--- a/1diena/2.uzduotis/style.css
+++ b/1diena/2.uzduotis/style.css
@@ -138,24 +138,25 @@ table {
 
 body {
   background-color: rgb(241, 238, 238);
-
 }
 
 .container {
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.box {
+  display: inline-block;
+  margin: 50px 20px;
   border: 2px solid rgb(207, 205, 205);
   border-radius: 3px;
   background-color: white;
-  margin: 50px 10px;
-  padding-bottom: 10px;
-  display: inline-block;
+  padding: 30px;
   width: 20%;
-  text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
-
 }
 
 h1 {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   font-size: 40px;
   font-weight: bold;
 }
@@ -169,7 +170,7 @@ h4 {
 
 p {
   color: rgb(202, 201, 201);
-  padding: 7px;
+  margin-bottom: 30px;
 }
 
 .normal h1 {
@@ -192,9 +193,9 @@ p {
 .premium button {
   border: none;
   border-radius: 3px;
-  padding: 15px;
+  padding: 20px;
   color: white;
   font-weight: bold;
-  margin: 15px auto;
+  margin: 0 auto;
   display: block;
 }
