--- a/1diena/3.uzduotis/style.css
+++ b/1diena/3.uzduotis/style.css
@@ -1,47 +1,215 @@
-body {
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
   margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 
-div {
-  width: 40%;
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* my code */
+
+body {
+  font-size: 0;
+}
+
+#leftHalf {
+  width: 50%;
+  display: inline-block;
+}
+
+#leftHalf img {
+  width: 100%;
+  height: 100vh;
+}
+
+#rightHalf {
+  width: 50%;
+  display: inline-block;
+  font-family: Arial, Helvetica, sans-serif;
+  vertical-align: top;
+}
+
+/* form */
+
+form {
+  margin: 200px 0 0 30px;
+  width: 70%;
 }
 
 h1 {
-  font-size: 50px;
-}
-
-h1, p, button {
-  font-family: Arial, Helvetica, sans-serif;
+  font-size: 60px;
+  font-weight: bold;
+  margin-bottom: 20px;
 }
 
 p {
-  color: grey;
+  color: rgb(160, 159, 159);
+  margin-bottom: 30px;
+  font-size: 16px;
 }
 
-.picture {
-  display: inline-block;
-}
-
-.picture img {
-  width: 100%;
+form>img {
+  width: 80px;
   height: auto;
-}
-
-.form {
-  display: inline-block;
+  margin-bottom: 20px;
 }
 
 input {
   display: block;
   margin: 20px 0;
-  padding: 15px;
+  padding: 15px 0 15px 15px;
+  width: 95%;
 }
 
 button {
-  background-color: rgb(150, 197, 97);
+  background-color: rgb(41, 105, 28);
   color: white;
   font-weight: bold;
   border: none;
   border-radius: 3px;
   padding: 15px 50px;
+  width: 98%;
+  box-shadow: 0px 1px 1px 2px #0e2c0a;
+}
+
+input::placeholder {
+  font-weight: bold;
+}
+
+input {
+  border: 2px solid rgb(235, 233, 233);
+  border-radius: 5px;
+}
+
+.aftertext {
+  margin: 20px 0 0 30px;
+  color: lightgray
 }
