--- a/1diena/5.uzduotis/style.css
+++ b/1diena/5.uzduotis/style.css
@@ -1,21 +1,170 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* my code */
 body {
   background: url(images/pexels-s-migaj-747964.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  font-size: 0;
+}
+
+h1 {
+  font-size: 30px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+p {
+  font-size: 16px;
+  margin-top: 10px;
 }
 
 .container {
   background-color: white;
   border-radius: 10px;
   opacity: 90%;
-  margin: 100px 300px;
+  margin: 200px 300px;
   text-align: center;
 }
 
 .box {
   display: inline-block;
-  width: 35%;
-  margin: 30px 50px;
+  width: 40%;
+  margin: 30px 30px;
   text-align: left;
 }
 
@@ -27,7 +176,8 @@ body {
   background-color: rgb(204, 59, 59);
 }
 
-.red, .blue {
+.red,
+.blue {
   border-radius: 10px;
-  padding: 0 20px;
+  padding: 20px;
 }
