--- a/1diena/6.uzduotis/style.css
+++ b/1diena/6.uzduotis/style.css
@@ -1,48 +1,199 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+
 body {
-  background: linear-gradient(rgba(0,0,0,.4), rgba(9, 66, 92, 0.7)), url(images/pexels-pixabay-326311.jpg);
+  line-height: 1;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* my code */
+
+body {
+  background: radial-gradient(circle, rgba(1, 1, 1, 0.1), rgba(1, 1, 2, 0.7), rgba(75, 134, 211, 0.7)), url(images/pexels-pixabay-326311.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Roboto', sans-serif;
   text-align: center;
+  font-size: 0;
+  height: auto;
+  width: 100%;
+}
+
+.container {
+  margin: 340px 0;
+}
+
+.text-box {
+  width: 45%;
+  padding: 30px;
+  margin: auto;
 }
 
 h1 {
   color: white;
   font-size: 50px;
+  font-weight: bold;
+  margin-bottom: 30px;
 }
 
 p {
   color: rgb(214, 212, 212, 80%);
   font-size: 18px;
-  margin-bottom: 40px;
-}
-
-.container {
-  padding: 300px 0;
+  font-weight: lighter;
 }
 
 .subscription {
   background-color: rgb(12, 11, 11, 80%);
   border-radius: 7px;
   padding: 15px 0;
-  width: 40%;
-  margin: auto;
+  width: 35%;
+  margin: 0 auto;
 }
 
 button,
 input {
   padding: 10px;
-  border-radius: 7px;
+  border-radius: 5px;
 }
 
 input {
   width: 65%;
+  margin-right: 10px;
 }
 
 button {
   background-color: rgb(14, 181, 231);
   color: white;
   border: none;
+  width: 25%;
 }
 
 .smaller {
