--- a/3diena/mogo-projektas/styles/components/_lines.scss
+++ b/3diena/mogo-projektas/styles/components/_lines.scss
@@ -16,5 +16,10 @@
   width: 280px;
   background-color: $lightyellow;
   height: 3px;
-  // margin: 0 auto;
+}
+
+.red-white-line {
+  width: 280px;
+  height: 3px;
+  background-color: $salmon;
 }
